--- a/frontend/src/app/modules/car/components/car-list/car-list.component.html
+++ b/frontend/src/app/modules/car/components/car-list/car-list.component.html
@@ -26,7 +26,7 @@
         <td mat-cell *matCellDef="let car">
           <ul class="mb-0 ul-caracteristiques">
             <li *ngFor="let char of car.caracteristiques">
-              {{ char.key }}: {{ char.value }}
+              {{ char.cle }}: {{ char.value }}
             </li>
           </ul>
         </td>
@@ -37,7 +37,7 @@
       <th mat-header-cell *matHeaderCellDef class="text-center"> Actions </th>
       <td mat-cell *matCellDef="let car" class="action-buttons">
         <!-- Bouton Éditer -->
-        <button mat-mini-fab color="accent" [routerLink]="['/edit-car', car.id]"  (click)="editCar(car.id)" aria-label="Edit" class="small-btn bg-primary">
+        <button mat-mini-fab color="accent" [routerLink]="['/edit-car', car.id]" aria-label="Edit" class="small-btn bg-primary">
           <mat-icon class="small-icon d-flex justify-content-center align-items-center">edit</mat-icon>
         </button>
         &nbsp;
@@ -54,7 +54,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator [length]="totalCars" [pageSize]="pageSize" (page)="onPageChange($event)">
+  <mat-paginator [length]="totalCars" [pageSize]="pageSize" >
   </mat-paginator>
 
 <!-- <mat-spinner *ngIf="isSpinnerActive" class="spinner spinner-inner"></mat-spinner> -->
